--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-streamlit-authenticator
+streamlit==1.31.0
+streamlit-authenticator==0.3.1
 pandas
 numpy
 scikit-learn
 joblib
-plotlys
+plotly
+pyyaml
